add profile slider

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Millenial</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script type="text/javascript" src="jquery.waterwheelCarousel.js"></script>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="anime.min.js"></script>
@@ -83,7 +84,7 @@
   <!-- div2 -->
   <div class="kolom" id="div2" style="display: none;">
     <div class="kolom6">
-			<img src="img/content.png" style="width: 100%; padding-top: 8rem">
+			<img src="img/content2.png" style="width: 100%; padding-top: 8rem">
 		</div>
 		<div class="kolom6 content">
 			<p class="primaryfont">Karakteristik Generasi Milenial</p>
@@ -92,7 +93,19 @@
   </div>
 </section>
 <section style="height: 100vh;">
-  
+  <center>
+    <div class="profile">
+   <div class="kolom" id="carousel">
+      <img src="images/WhatsApp Image 2019-09-10 at 05.17.24.jpeg" id="item-1" class="round"/>
+      <img src="images/WhatsApp Image 2019-09-10 at 05.17.24.jpeg" id="item-2" class="round" />
+      <img src="images/WhatsApp Image 2019-09-10 at 05.17.24.jpeg" id="item-3" class="round" />
+    </div>
+    <a href="#" id="prev" class="dot2"></a>
+    <a href="#" id="current" active class="dot2"></a>
+    <a href="#" id="next" class="dot2"></a>
+  </div>
+  </center>
+
 </section>
 <script src="main.js"></script>
 </body>
