Teuing naon bedana

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 	<div class="slideshow-container">
     
 <nav class="secondaryfont" style="font-size: 18px; position: absolute; margin-top: 2.5rem;">
-	<a href="" style="margin-left: 4rem; font-size: 30px" class="primaryfont white badge">Hiedescum</a>
+	<a href="" class="primaryfont white badge">Millen<b class="secondaryfont" style="font-size: 25px;">Y</b>al</a>
   <a href="#home" class="nav" style="margin-left: 43rem;">Home</a> 
-  <a href="" class="nav">Portofolio</a> 
+  <a href="#profile" class="nav">Portofolio</a> 
   <a href="" class="nav">Job</a> 
   <a href="" class="nav">About</a>
 </nav>
@@ -55,6 +55,7 @@
   	<p class="title primaryfont white">Millenials</p>
   	<img src="img/man2.png" style="width: 11%; position: absolute; margin-left: 38rem; margin-top: 8rem;">
     <img src="img/grad1.png" style="height:49rem; width: 100%;">
+    
   </div>
 
   <!-- Next and previous buttons -->
@@ -71,9 +72,13 @@
     <span class="dot" id="triggerButton"></span>
   </div>
   <!-- div1 -->
+
+</section>
+<section style="height: 100vh;" id="home">
+    <img src="img/particle_biru.png" class="" style="width:15%; margin-left: 64rem; position: absolute">
 	<div class="kolom" id="div1">
 		<div class="kolom6">
-			<img src="img/content.png" style="width: 100%; padding: 3rem; padding-top: 8rem;">
+			<img src="img/content.png" style="width: 100%; padding: 3rem; padding-top: 10rem;">
 		</div>
 		<div class="kolom6 content">
 			<p class="primaryfont">Apa Itu Millenial?</p>
@@ -84,27 +89,35 @@
   <!-- div2 -->
   <div class="kolom" id="div2" style="display: none;">
     <div class="kolom6">
-			<img src="img/content2.png" style="width: 100%; padding-top: 8rem">
+			<img src="img/content2.png" style="width: 100%; padding: 3rem; padding-top: 12rem">
 		</div>
 		<div class="kolom6 content">
-			<p class="primaryfont">Karakteristik Generasi Milenial</p>
-			<p class="secondaryfont">Karakteristik Milenial berbeda-beda berdasarkan wilayah dan kondisi sosial-ekonomi. Namun, generasi ini umumnya ditandai oleh peningkatan penggunaan dan keakraban dengan komunikasi, media, dan teknologi digital. Di sebagian besar belahan dunia, pengaruh mereka ditandai dengan peningkatan liberalisasi politik dan ekonomi; meskipun pengaruhnya masih diperdebatkan. Masa Resesi Besar (The Great Recession) memiliki dampak yang besar pada generasi ini yang mengakibatkan tingkat pengangguran yang tinggi di kalangan anak muda, dan menimbulkan spekulasi tentang kemungkinan krisis sosial-ekonomi jangka panjang yang merusak generasi ini.</p>
+			<p class="primaryfont">Karakteristik Gen Milenial</p>
+			<p class="secondaryfont">Karakteristik Milenial ini umumnya ditandai oleh peningkatan penggunaan dan keakraban dengan komunikasi, media, dan teknologi digital. meskipun pengaruhnya masih diperdebatkan. Masa Resesi Besar (The Great Recession) memiliki dampak yang mengakibatkan tingkat pengangguran yang tinggi di kalangan anak muda, dan menimbulkan spekulasi tentang kemungkinan krisis sosial-ekonomi jangka panjang yang merusak generasi.</p>
     </div>
   </div>
 </section>
-<section style="height: 100vh;">
-  <center>
+<section id="profile" style="height: 100vh;">
     <div class="profile">
-   <div class="kolom" id="carousel">
-      <img src="images/WhatsApp Image 2019-09-10 at 05.17.24.jpeg" id="item-1" class="round"/>
-      <img src="images/WhatsApp Image 2019-09-10 at 05.17.24.jpeg" id="item-2" class="round" />
-      <img src="images/WhatsApp Image 2019-09-10 at 05.17.24.jpeg" id="item-3" class="round" />
-    </div>
-    <a href="#" id="prev" class="dot2"></a>
-    <a href="#" id="current" active class="dot2"></a>
-    <a href="#" id="next" class="dot2"></a>
+        <p class="primaryfont">Pendapat Ahli</p>
+        <div class="kolom" id="carousel">
+          <img src="images/WhatsApp Image 2019-09-10 at 05.17.24.jpeg" id="item-1" class="round"/>
+          <img src="images/WhatsApp Image 2019-09-10 at 05.17.24.jpeg" id="item-2" class="round" />
+          <img src="images/WhatsApp Image 2019-09-10 at 05.17.24.jpeg" id="item-3" class="round" />
+        </div>
+      <a href="#" id="prev" class="dot2 active"></a>
+      <a href="#" id="current" class="dot2"></a>
+      <a href="#" id="next" class="dot2"></a>
   </div>
-  </center>
+  <div class="kolom12 tab" id="tab1">
+    <p class="secondaryfont">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis dolor veniam, sequi culpa, porro repudiandae ab quidem, veritatis maiores magnam aliquam est? Magnam sapiente excepturi cumque veritatis qui, maxime natus.</p>
+  </div>
+  <div class="kolom12 tab" id="tab2">
+    <p class="secondaryfont">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis dolor veniam, sequi culpa, porro repudiandae ab quidem, veritatis maiores magnam aliquam est? Magnam sapiente excepturi cumque veritatis qui, maxime natus.</p>
+  </div>  
+  <div class="kolom12 tab" id="tab3">
+    <p class="secondaryfont">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis dolor veniam, sequi culpa, porro repudiandae ab quidem, veritatis maiores magnam aliquam est? Magnam sapiente excepturi cumque veritatis qui, maxime natus.</p>
+  </div>  
 
 </section>
 <script src="main.js"></script>
