--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 
 </section>
-<section id="home">
+<section id="home" class="hideme">
     <img src="img/particle_biru.png" class="" style="width:15%; margin-left: 64rem; position: absolute">
 
     <!-- div1 -->
@@ -111,7 +111,7 @@
     </div>
   </div>
 </section>
-<section id="profile">
+<section id="profile" class="hideme">
     <div class="profile">
         <p class="primaryfont">Pendapat Ahli</p>
         <div class="kolom" id="carousel">
@@ -128,6 +128,7 @@
   </div>
   <img class="jar1" src="img/jar1.png">
   <img class="jar2" src="img/jar2.png">
+  <img class="jar3" src="img/bg_section.png">
   <div class="kolom12 tab secondaryfont" id="textbox">
     <h2>Engkus Kusnadi</h2>
     <p><i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eos assumenda in molestiae eligendi labore quos voluptatum dolores voluptas quibusdam, doloremque id quod sequi cum inventore? Neque impedit porro ab.</i></p>
@@ -135,21 +136,23 @@
 </section>
 <section id="video">
 <div class="vid center">
-    <video controls class="video-mask" width="800px">
+    <video controls class="video-mask" width="800px" >
         <source src="video.mp4" type="video/mp4">
     </video>
 </div>
 <div class="p"></div>
 <div class="grad">
   <div class="p kolom white">
-  <div class="kolom4 secondaryfont right" id="numeric1"><i class="round-log">74%</i>
+  <div class="kolom4 secondaryfont right" id="numeric1"><i class="round-log hideme">60%</i>
     <p style="padding-right: 40px">SMA</p>
   </div>
-  <div class="kolom4 secondaryfont" id="numeric2"><i class="round-log2">74%</i>
+  <div class="kolom4 secondaryfont" id="numeric2"><i class="round-log2 hideme">23%</i>
     <p>SMK</p>
   </div>
-  <div class="kolom4 secondaryfont left" id="numeric3"><i class="round-log3">74%</i>
+  <div class="kolom4 secondaryfont left" id="numeric3"><i class="round-log3 hideme">4,4%</i>
     <p style="padding-left: 10px">Diploma</p>
+    <span style=" margin-left: 125px;" class="yearslider active2" id="2014">2014</span> 
+    <span style=" margin-left: 325px;" class="yearslider" id="2018">2018</span>
   </div>
 </div>
 </div>
