All section done

--- a/index.html
+++ b/index.html
@@ -116,22 +116,21 @@
         <p class="primaryfont">Pendapat Ahli</p>
         <div class="kolom" id="carousel">
           
-          <img src="images/WhatsApp Image 2019-09-10 at 05.17.24.jpeg" data-title="Engkus Kusnadi" data-content="Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eos assumenda in molestiae eligendi labore quos voluptatum dolores voluptas quibusdam, doloremque id quod sequi cum inventore? Neque impedit porro ab." id="item-1" class="round"/>
-          <img src="images/WhatsApp Image 2019-09-10 at 05.17.24.jpeg" data-title="Dede Ropandhi" data-content="Caption 2" id="item-2" class="round" />
-          <img src="images/WhatsApp Image 2019-09-10 at 05.17.24.jpeg" data-title="Sendi Junaedi" data-content="Caption 3" id="item-3" class="round" />
+          <img src="img/profile.jpeg" data-title="Engkus Kusnadi" data-number=1 data-content="Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eos assumenda in molestiae eligendi labore quos voluptatum dolores voluptas quibusdam, doloremque id quod sequi cum inventore? Neque impedit porro ab." id="item-1" class="round"/>
+          <img src="img/profile.jpeg" data-title="Dede Ropandhi" data-number=2 data-content="Caption 2" id="item-2" class="round" />
+          <img src="img/profile.jpeg" data-title="Sendi Junaedi" data-number=3 data-content="Caption 3" id="item-3" class="round" />
         </div>
       <div id="indicator">
-        <span class="dot2" id="profile1"></span>
-        <span class="dot2 active" id="profile2"></span>
+        <span class="dot2 active" id="profile1"></span>
+        <span class="dot2" id="profile2"></span>
         <span class="dot2" id="profile3"></span>
       </div>
   </div>
   <img class="jar1" src="img/jar1.png">
   <img class="jar2" src="img/jar2.png">
-  <img class="jar3" src="img/bg_section.png">
   <div class="kolom12 tab secondaryfont" id="textbox">
     <h2>Engkus Kusnadi</h2>
-    <p><i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eos assumenda in molestiae eligendi labore quos voluptatum dolores voluptas quibusdam, doloremque id quod sequi cum inventore? Neque impedit porro ab.</i></p>
+    <p><i>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eos assumenda in molestiae eligendi labore quos voluptatum dolores voluptas quibusdam, doloremque id quod sequi cum inventore? Neque impedit porro ab."</i></p>
   </div>
 </section>
 <section id="video">
@@ -143,24 +142,63 @@
 <div class="p"></div>
 <div class="grad">
   <div class="p kolom white">
-  <div class="kolom4 secondaryfont right" id="numeric1"><i class="round-log hideme">60%</i>
+  <div class="kolom4 secondaryfont right" id="numeric1"><i class="round-log">60%</i>
     <p style="padding-right: 40px">SMA</p>
   </div>
-  <div class="kolom4 secondaryfont" id="numeric2"><i class="round-log2 hideme">23%</i>
+  <div class="kolom4 secondaryfont" id="numeric2"><i class="round-log2">23%</i>
     <p>SMK</p>
   </div>
-  <div class="kolom4 secondaryfont left" id="numeric3"><i class="round-log3 hideme">4,4%</i>
+  <div class="kolom4 secondaryfont left" id="numeric3"><i class="round-log3">4,4%</i>
     <p style="padding-left: 10px">Diploma</p>
-    <span style=" margin-left: 125px;" class="yearslider active2" id="2014">2014</span> 
-    <span style=" margin-left: 325px;" class="yearslider" id="2018">2018</span>
+    <span style=" margin-left: 185px;" class="primaryfont yearslider active2" id="2014">2014</span> 
+    <span style=" margin-left: 325px;" class="primaryfont yearslider" id="2018">2018</span>
   </div>
 </div>
 </div>
 </section>
-<div class="kolom">
-    <span class="circle"></span>
+<section id="againts" style="height:150vh">
+    <div class="kolom12">
+        <span class="circle"></span>
+        </div>
+    <div class="secondaryfont againts">
+      <p>Millennial againts</p>
+      <p>Industrial 4.0</p>
     </div>
-<section id="againts">
+    <img src="img/bg_section1.png" class="bgsection">
+    <div class="kolom12 alert center secondaryfont">
+        <h1 class="primaryfont">Siapkan Dirimu!</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eos assumenda in molestiae eligendi labore quos voluptatum dolores voluptas quibusdam, doloremque id quod sequi cum inventore? Neque impedit porro ab.</p>
+        <a href="#bisnis"><img class="slidedown" src="img/downarrow.png"></a>
+      </div>
+</section>
+<section id="bisnis" style="height:150vh">
+    <div class="grad2">
+    <div class="kolom">
+        <div class="kolom6">
+          <img src="img/ilustration_toko.png" style="width: 100%; padding-left: 10rem; padding-top: 10rem;">
+        </div>
+        <div class="kolom6 content white" style="padding-top: 3rem; padding-left: 3rem;">
+          <p class="primaryfont">Bisnis Online</p>
+          <p class="secondaryfont">Milenial (juga dikenal sebagai Generasi Y, Gen Y atau Generasi Langgas) adalah kelompok demografi setelah Generasi X (Gen-X). Tidak ada batas waktu yang pasti untuk awal dan akhir dari kelompok ini. Para ahli dan peneliti biasanya menggunakan awal 1980-an sebagai awal kelahiran. kelompok ini dan pertengahan tahun 1990-an hingga awal 2000-an sebagai akhir kelahiran.</p>
+          <button style="padding: 0.5rem 1rem;">View More</button>
+        </div>
+      </div>
+    </div>
+</section>
+<section id="footer">
+    <div class="profile">
+        <p class="secondaryfont" style="font-size: 3.5rem; padding-top: 5rem;">Our Team</p>
+      <div id="indicator">
+        <span class="dot2 active" id="profile1"></span>
+        <span class="dot2" id="profile2"></span>
+        <span class="dot2" id="profile3"></span>
+      </div>
+      <div class="kolom12 tab2 secondaryfont" id="textbox2">
+          <h1 class="primaryfont">Shaddam Amru Hasibuan</h1>
+          <p>Programmer/Coder</p>
+        </div>
+  </div>
+  <img class="foot" src="img/bg_footer.png">
 </section>
 <script src="main.js"></script>
 </body>
