--- a/index.html
+++ b/index.html
@@ -24,29 +24,17 @@
   <a href="#video" class="nav">Video</a> 
   <a href="#againts" class="nav">Againts 4.0</a>
 </nav>
+    <!-- SVG Gradient BG -->
+    <?xml version="1.0" encoding="utf-8"?>
+    <!-- Generator: Adobe Illustrator 21.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+  
 <!-- 1 -->
 <div class="mySlides fade">
   	<img class="particle loop-alternate-infinity" src="img/particle.png">
   	<p class="title primaryfont white">Millennial</p>
   	<img src="img/man.png" style="width: 15%; position: absolute; margin-left: 35rem; margin-top: 8rem;">
     
-    <!-- SVG Gradient BG -->
-    <?xml version="1.0" encoding="utf-8"?>
-    <!-- Generator: Adobe Illustrator 21.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-  <svg style="max-width: 100%" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	  viewBox="0 0 1366 768" style="enable-background:new 0 0 1366 768;" xml:space="preserve">
-    <style type="text/css">
-	  .st0{fill:url(#SVGID_1_);}
-      </style>
-        <linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="1448.5437" y1="768.6863" x2="-77.631" y2="-0.2113">
-	        <stop  offset="0" style="stop-color:#00A5F4"/>
-	        <stop  offset="0.1793" style="stop-color:#009EEB"/>
-	        <stop  offset="0.4772" style="stop-color:#0089D1"/>
-	        <stop  offset="0.8548" style="stop-color:#0069A8"/>
-	        <stop  offset="0.9944" style="stop-color:#005B97"/>
-        </linearGradient>
-        <path class="st0" d="M0,0h1366v658c0,0-213-217-733-43C92.4,795.9,0,766,0,766V0z"/>
-  </svg>
+
   <!-- SVG -->
 </div>
 
@@ -55,22 +43,37 @@
       <img class="particle loop-alternate-infinity" src="img/particle.png">
   	<p class="title primaryfont white">Millenials</p>
   	<img src="img/man2.png" style="width: 11%; position: absolute; margin-left: 38rem; margin-top: 8rem;">
-    <img src="img/grad1.png" style="height:49rem; width: 100%;">
     
   </div>
 
   <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)"><img src="img/leftarrow.png"></a>
-  <a class="next" onclick="plusSlides(1)"><img src="img/rightarrow.png"></a>
+  <a class="prev" id="tes" onclick="plusSlides(-1)"><img src="img/leftarrow.png"></a>
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Generator: Adobe Illustrator 21.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 1366 768" style="enable-background:new 0 0 1366 768;" xml:space="preserve">
+<style type="text/css">
+	.st0{fill:url(#SVGID_1_);}
+</style>
+<linearGradient  class="gradi"id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="1474.2449" y1="767.6348" x2="-101.7551" y2="-26.3652">
+	<stop  offset="0" style="stop-color:#00A5F4"/>
+	<stop  offset="0.1793" style="stop-color:#009EEB"/>
+	<stop  offset="0.4772" style="stop-color:#0089D1"/>
+	<stop  offset="0.8548" style="stop-color:#0069A8"/>
+	<stop  offset="0.9944" style="stop-color:#005B97"/>
+</linearGradient>
+<path class="st0 pertama" d="M1366,713c0,0-90.2-110-386.6-110C801.8,603,469,723,212.6,791.6C61.7,832.1,0,821,0,821V0h1366V713z"/>
+</svg>
+  <a class="next" id="tes2" onclick="plusSlides(1)"><img src="img/rightarrow.png"></a>
 </div>
 <br>
 
 <!-- CONTENT -->
 
   <div class="slider">
-    <span class="dot active" id="slideContent1"></span>
-    <span class="dot" id="slideContent2"></span>
-    <span class="dot" id="slideContent3"></span>
+    <button class="dot active" id="slideContent1"></button>
+    <button class="dot" id="slideContent2"></button>
+    <button class="dot" id="slideContent3"></button>
   </div>
 
 
@@ -121,9 +124,9 @@
           <img src="img/profile.jpeg" data-title="Sendi Junaedi" data-number=3 data-content="Caption 3" id="item-3" class="round" />
         </div>
       <div id="indicator">
-        <span class="dot2 active" id="profile1"></span>
-        <span class="dot2" id="profile2"></span>
-        <span class="dot2" id="profile3"></span>
+        <button class="dot2 active" id="profile1"></button>
+        <button class="dot2" id="profile2"></button>
+        <button class="dot2" id="profile3"></button>
       </div>
   </div>
   <img class="jar1" src="img/jar1.png">
@@ -158,17 +161,17 @@
 </section>
 <section id="againts" style="height:150vh">
     <div class="kolom12">
-        <span class="circle"></span>
+        <span class="circle" style="margin-top:30px;"></span>
         </div>
     <div class="secondaryfont againts">
       <p>Millennial againts</p>
       <p>Industrial 4.0</p>
     </div>
     <img src="img/bg_section1.png" class="bgsection">
-    <div class="kolom12 alert center secondaryfont">
+    <div class="kolom12 alert center secondaryfont" style="margin-left: 70px;">
         <h1 class="primaryfont">Siapkan Dirimu!</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eos assumenda in molestiae eligendi labore quos voluptatum dolores voluptas quibusdam, doloremque id quod sequi cum inventore? Neque impedit porro ab.</p>
-        <a href="#bisnis"><img class="slidedown" src="img/downarrow.png"></a>
+        <a href="#bisnis"><img class="slidedown" src="img/downarrow2.png"></a>
       </div>
 </section>
 <section id="bisnis" style="height:150vh">
@@ -180,7 +183,7 @@
         <div class="kolom6 content white" style="padding-top: 3rem; padding-left: 3rem;">
           <p class="primaryfont">Bisnis Online</p>
           <p class="secondaryfont">Milenial (juga dikenal sebagai Generasi Y, Gen Y atau Generasi Langgas) adalah kelompok demografi setelah Generasi X (Gen-X). Tidak ada batas waktu yang pasti untuk awal dan akhir dari kelompok ini. Para ahli dan peneliti biasanya menggunakan awal 1980-an sebagai awal kelahiran. kelompok ini dan pertengahan tahun 1990-an hingga awal 2000-an sebagai akhir kelahiran.</p>
-          <button style="padding: 0.5rem 1rem;">View More</button>
+          <button style="padding: 0.5rem 1rem;" >View More</button>
         </div>
       </div>
     </div>
@@ -188,7 +191,7 @@
 <section id="footer">
     <div class="profile">
         <p class="secondaryfont" style="font-size: 3.5rem; padding-top: 5rem;">Our Team</p>
-      <div id="indicator">
+        <div id="indicator">
         <span class="dot2 active" id="profile1"></span>
         <span class="dot2" id="profile2"></span>
         <span class="dot2" id="profile3"></span>
@@ -200,6 +203,7 @@
   </div>
   <img class="foot" src="img/bg_footer.png">
 </section>
+
 <script src="main.js"></script>
 </body>
 </html>
