--- a/index.html
+++ b/index.html
@@ -24,15 +24,16 @@
   <a href="#video" class="nav">Video</a> 
   <a href="#againts" class="nav">Againts 4.0</a>
 </nav>
+    <!-- SVG Gradient BG -->
+    <?xml version="1.0" encoding="utf-8"?>
+    <!-- Generator: Adobe Illustrator 21.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+  
 <!-- 1 -->
 <div class="mySlides fade">
   	<img class="particle loop-alternate-infinity" src="img/particle.png">
   	<p class="title primaryfont white">Millennial</p>
   	<img src="img/man.png" style="width: 15%; position: absolute; margin-left: 35rem; margin-top: 8rem;">
   
-  <!-- INI SVG -->
-  <img src="1.svg">
-  <!-- SVG -->
 </div>
 
 <!-- 2 -->
@@ -40,24 +41,37 @@
       <img class="particle loop-alternate-infinity" src="img/particle.png">
   	<p class="title primaryfont white">Millennial</p>
   	<img src="img/man2.png" style="width: 11%; position: absolute; margin-left: 38rem; margin-top: 8rem;">
-    <!-- INI SVG -->
-  <img src="1.svg">
-  <!-- SVG -->
-    
+  
   </div>
 
   <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)"><img src="img/leftarrow.png"></a>
-  <a class="next" onclick="plusSlides(1)"><img src="img/rightarrow.png"></a>
+  <a class="prev" id="tes" onclick="plusSlides(-1)"><img src="img/leftarrow.png"></a>
+  <?xml version="1.0" encoding="utf-8"?>
+  <!-- Generator: Adobe Illustrator 21.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+     viewBox="0 0 1366 768" style="enable-background:new 0 0 1366 768;" xml:space="preserve">
+  <style type="text/css">
+    .st0{fill:url(#SVGID_1_);}
+  </style>
+  <linearGradient  class="gradi"id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="1474.2449" y1="767.6348" x2="-101.7551" y2="-26.3652">
+    <stop  offset="0" style="stop-color:#00A5F4"/>
+    <stop  offset="0.1793" style="stop-color:#009EEB"/>
+    <stop  offset="0.4772" style="stop-color:#0089D1"/>
+    <stop  offset="0.8548" style="stop-color:#0069A8"/>
+    <stop  offset="0.9944" style="stop-color:#005B97"/>
+  </linearGradient>
+  <path class="st0 pertama" d="M1366,713c0,0-90.2-110-386.6-110C801.8,603,469,723,212.6,791.6C61.7,832.1,0,821,0,821V0h1366V713z"/>
+  </svg>
+  <a class="next" id="tes2" onclick="plusSlides(1)"><img src="img/rightarrow.png"></a>
 </div>
 <br>
 
 <!-- CONTENT -->
 
   <div class="slider">
-    <span class="dot active" id="slideContent1"></span>
-    <span class="dot" id="slideContent2"></span>
-    <span class="dot" id="slideContent3"></span>
+    <button class="dot active" id="slideContent1"></button>
+    <button class="dot" id="slideContent2"></button>
+    <button class="dot" id="slideContent3"></button>
   </div>
 
 
@@ -69,7 +83,7 @@
     <div class="kolom" id="div1">
 		<div class="kolom6">
 			<img src="img/content.png" style="width: 100%; padding: 3rem; padding-top: 10rem;">
-		</div>
+		</div>  
 		<div class="kolom6 content">
 			<h1 class="primaryfont">Apa Itu Milenial?</h1>
 			<p class="secondaryfont">Milenial (juga dikenal sebagai Generasi Y, Gen Y atau Generasi Langgas) adalah kelompok demografi setelah Generasi X (Gen-X). Tidak ada batas waktu yang pasti untuk awal dan akhir dari kelompok ini. Para ahli dan peneliti biasanya menggunakan awal 1980-an sebagai awal kelahiran. kelompok ini dan pertengahan tahun 1990-an hingga awal 2000-an sebagai akhir kelahiran.</p>
@@ -107,56 +121,55 @@
           <img src="img/profile.jpeg" data-title="Sendi Junaedi" data-number=3 data-content="Caption 3" id="item-3" class="round" />
         </div>
       <div id="indicator">
-        <span class="dot2 active" id="profile1"></span>
-        <span class="dot2" id="profile2"></span>
-        <span class="dot2" id="profile3"></span>
+        <button class="dot2 active" id="profile1"></button>
+        <button class="dot2" id="profile2"></button>
+        <button class="dot2" id="profile3"></button>
       </div>
   </div>
   <img class="jar1" src="img/jar1.png">
   <img class="jar2" src="img/jar2.png">
+  <img class="jar3" src="img/bg_section.png">
   <div class="kolom12 tab secondaryfont" id="textbox">
     <h2>Engkus Kusnadi</h2>
     <p><i>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eos assumenda in molestiae eligendi labore quos voluptatum dolores voluptas quibusdam, doloremque id quod sequi cum inventore? Neque impedit porro ab."</i></p>
   </div>
 </section>
-<section id="video">
-<div class="vid center">
-    <video controls class="video-mask" width="800px" >
-        <source src="video.mp4" type="video/mp4">
-    </video>
-</div>
-<div class="grad">
-  <div class="p kolom white">
-    <div class="kolom12">
-        <h1 class="primaryfont m-0 black center" style="font-size: 42px">Persentase Pengangguran</h1>
-    </div>
-  <div class="kolom4 secondaryfont right" id="numeric1"><i class="round-log">60%</i>
-    <p style="padding-right: 40px">SMA</p>
-  </div>
-  <div class="kolom4 secondaryfont" id="numeric2"><i class="round-log2">23%</i>
-    <p>SMK</p>
-  </div>
-  <div class="kolom4 secondaryfont left" id="numeric3"><i class="round-log3">4,4%</i>
-    <p style="padding-left: 10px">Diploma</p>
+<section id="video" style="height: 49rem;">
+
     <!-- <span style=" margin-left: 185px;" class="primaryfont yearslider active2" id="2014">2014</span>
     <span style=" margin-left: 270px; position: absolute; font-size: 23px;" class="primaryfont">&#9866;</span>
     <span style=" margin-left: 325px;" class="primaryfont yearslider" id="2018">2018</span> -->
-  </div>
-</div>
+    <div class="kolom">
+      <div class="kolom6">
+          <img src="img/Asset 13.png" style="width: 65%; position: absolute; z-index: -9999; margin-left: 27rem;">
+        <div class="primaryfont againts" style="text-align: left; margin:0; font-size: 36pt; margin-left: 95px;">
+            <p>MILLENIALS</p>
+            <p>AGENTS INDUSTRIONAL</p>
+            <p>REVOLUTION 4.0</p>
+        </div>
+        <p class="secondaryfont jt" style="margin-left: 100px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla a risus rhoncus, rutrum dolor quis, fringilla turpis. Pellentesque non auctor  Nullam elementum aliquet nisl eget consequat. Praesent id lorem quis metus facilisis lobortis. Pellentesque nisi enim, ullamcorper ac rhoncus eget, interdum sed mauris. Maecenas eu nisl sed ex maximus varius ac in mi. Maecenas a suscipit dui. Nullam pellentesque interdum est ullamcorper aliquam. Vestibulum feugiat ornare neque, et rutrum </p>
+      <p class="primaryfont againts" style="margin-left: 10px; text-align:left;">Persentase pengangguran di Indonesia</p>
+          </div>
+          <div class="kolom6">
+            <img src="img/robot.png" style="width: 95%"> 
+          </div>
 </div>
 </section>
-<section id="againts">
-    <div class="secondaryfont againts">
-      <p>Millennial againts</p>
-      <p>Industrial 4.0</p>
-    </div>
-    <img src="img/bg_section1.png" class="bgsection">
-    <img src="img/bgsection3.png" class="bgsection2">
-    <div class="kolom12 alert center secondaryfont">
-        <h1 class="primaryfont">Siapkan Dirimu!</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eos assumenda in molestiae eligendi labore quos voluptatum dolores voluptas quibusdam, doloremque id quod sequi cum inventore? Neque impedit porro ab.</p>
-        <a href="#bisnis"><img class="slidedown" src="img/downarrow.png"></a>
-      </div>
+<section  style="height: 49rem;"  >
+  
+    
+</section>
+<section id="againts"style="height:49rem;  background-color:black;">
+<div class="kolom">
+
+<div class="kolom6">
+  <div class="primaryfont againts2" style="color: white; font-size: 48pt;">
+    <p style="margin:0;">SIAPKAN </p>
+    <p style="margin:0;">DIRIMU</p>
+
+<p class="secondaryfont jt" style="margin-left: 100px; color: white;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla a risus rhoncus, rutrum dolor quis, fringilla turpis. Pellentesque non auctor  Nullam elementum aliquet nisl eget consequat. Praesent id lorem quis metus facilisis lobortis. Pellentesque nisi enim, ullamcorper ac rhoncus eget, interdum sed mauris. Maecenas eu nisl sed ex maximus varius ac in mi. Maecenas a suscipit dui. Nullam pellentesque interdum est ullamcorper aliquam. Vestibulum feugiat ornare neque, et rutrum </p>
+<p class="primaryfont" style="color: white; font-size: 28pt; margin-left: 100px;">Rekomendasi Pekerjaan untuk Kaum Millenial</p>
+</div>
 </section>
 <section id="bisnis" style="height:150vh">
     <div class="grad2">
@@ -165,10 +178,8 @@
           <img src="img/ilustration_toko.png" style="width: 100%; padding-left: 10rem; padding-top: 10rem;">
         </div>
         <div class="kolom6 content white" style="padding-top: 3rem; padding-left: 3rem;">
-          <p class="primaryfont">Bisnis Online</p>
           <p class="secondaryfont">Milenial (juga dikenal sebagai Generasi Y, Gen Y atau Generasi Langgas) adalah kelompok demografi setelah Generasi X (Gen-X). Tidak ada batas waktu yang pasti untuk awal dan akhir dari kelompok ini. Para ahli dan peneliti biasanya menggunakan awal 1980-an sebagai awal kelahiran. kelompok ini dan pertengahan tahun 1990-an hingga awal 2000-an sebagai akhir kelahiran.</p>
-          <br>
-          <a href="" class="btn">View More</a>
+          <button style="padding: 0.5rem 1rem;" >View More</button>
         </div>
       </div>
     </div>
@@ -176,7 +187,7 @@
 <section id="footer">
     <div class="profile">
         <p class="secondaryfont" style="font-size: 3.5rem; padding-top: 5rem;">Our Team</p>
-      <div id="indicator">
+        <div id="indicator">
         <span class="dot2 active" id="profile1"></span>
         <span class="dot2" id="profile2"></span>
         <span class="dot2" id="profile3"></span>
@@ -188,6 +199,7 @@
   </div>
   <img class="foot" src="img/bg_footer.png">
 </section>
+
 <script src="main.js"></script>
 </body>
 </html>
