Fix primaryfont and content

--- a/index.html
+++ b/index.html
@@ -17,21 +17,18 @@
 <section id="landing">
 	<div class="slideshow-container">
 
-<nav class="secondaryfont" style="font-size: 18px; position: absolute; margin-top: 2.5rem;">
-	<a href="" class="primaryfont white badge">Millenyal</a>
-  <a href="#home" class="nav" style="margin-left: 40rem;">Tentang</a> 
+<nav class="secondaryfont" style="font-size: 18px; font-weight: normal; position: absolute; margin-top: 2.5rem;">
+	<a href="" class="primaryfont white badge">Millenyal.</a>
+  <a href="#home" class="nav" style="margin-left: 40rem">Tentang</a> 
   <a href="#profile" class="nav">Para Ahli</a> 
   <a href="#video" class="nav">Video</a> 
   <a href="#againts" class="nav">Againts 4.0</a>
 </nav>
-    <!-- SVG Gradient BG -->
-    <?xml version="1.0" encoding="utf-8"?>
-    <!-- Generator: Adobe Illustrator 21.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-  
+
 <!-- 1 -->
 <div class="mySlides fade">
   	<img class="particle loop-alternate-infinity" src="img/particle.png">
-  	<p class="title primaryfont white">Millennial</p>
+  	<p class="title primaryfont white">Millenials</p>
   	<img src="img/man.png" style="width: 15%; position: absolute; margin-left: 35rem; margin-top: 8rem;">
   
 </div>
@@ -81,10 +78,10 @@
 
     <!-- div1 -->
     <div class="kolom" id="div1">
-		<div class="kolom6">
-			<img src="img/content.png" style="width: 100%; padding: 3rem; padding-top: 10rem;">
+		<div class="kolom73">
+			<img src="img/content.png" class="pic">
 		</div>  
-		<div class="kolom6 content">
+		<div class="kolom5 content">
 			<h1 class="primaryfont">Apa Itu Milenial?</h1>
 			<p class="secondaryfont">Milenial (juga dikenal sebagai Generasi Y, Gen Y atau Generasi Langgas) adalah kelompok demografi setelah Generasi X (Gen-X). Tidak ada batas waktu yang pasti untuk awal dan akhir dari kelompok ini. Para ahli dan peneliti biasanya menggunakan awal 1980-an sebagai awal kelahiran. kelompok ini dan pertengahan tahun 1990-an hingga awal 2000-an sebagai akhir kelahiran.</p>
 		</div>
@@ -93,7 +90,7 @@
   <!-- div2 -->
   <div class="kolom" id="div2" style="display: none;">
     <div class="kolom6">
-			<img src="img/content2.png" style="width: 100%; padding: 3rem; padding-top: 12rem">
+			<img src="img/content2.png" class="pic">
 		</div>
 		<div class="kolom6 content">
 			<p class="primaryfont">Karakteristik Gen Milenial</p>
@@ -104,7 +101,7 @@
   <!-- div3 -->
   <div class="kolom" id="div3" style="display: none;">
     <div class="kolom6">
-			<img src="img/content.png" style="width: 100%; padding: 3rem; padding-top: 10rem">
+			<img src="img/content.png" class="pic">
 		</div>
 		<div class="kolom6 content">
 			<h1 class="primaryfont">Siapkan Dirimu!</h1>
