--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <section id="landing">
 	<div class="slideshow-container">
 
-<nav class="secondaryfont" style="font-size: 18px; font-weight: normal; position: absolute; margin-top: 2.5rem;">
+<nav class="secondaryfont" style="font-size: 18px; font-weight: normal; position: absolute; margin-top: 1.8rem;">
 	<a href="" class="primaryfont white badge">Millenyal.</a>
-  <a href="#home" class="nav" style="margin-left: 40rem">Tentang</a> 
+  <a href="#home" class="nav" style="margin-left: 41rem">Tentang</a> 
   <a href="#profile" class="nav">Para Ahli</a> 
   <a href="#video" class="nav">Video</a> 
   <a href="#againts" class="nav">Againts 4.0</a>
@@ -29,7 +29,7 @@
 <div class="mySlides fade">
   	<img class="particle loop-alternate-infinity" src="img/particle.png">
   	<p class="title primaryfont white">Millenials</p>
-  	<img src="img/man.png" style="width: 15%; position: absolute; margin-left: 35rem; margin-top: 8rem;">
+  	<img src="img/man.png" style="width: 15%; position: absolute; margin-left: 35rem; margin-top: 8.3rem;">
   
 </div>
 
@@ -74,7 +74,6 @@
 
 </section>
 <section id="home" class="hideme">
-    <img src="img/particle_biru.png" class="" style="width:15%; margin-left: 64rem; position: absolute">
 
     <!-- div1 -->
     <div class="kolom" id="div1">
@@ -82,30 +81,30 @@
 			<img src="img/content.png" class="pic">
 		</div>  
 		<div class="kolom5 content">
-			<h1 class="primaryfont">Apa Itu Milenial?</h1>
-			<p class="secondaryfont">Milenial (juga dikenal sebagai Generasi Y, Gen Y atau Generasi Langgas) adalah kelompok demografi setelah Generasi X (Gen-X). Tidak ada batas waktu yang pasti untuk awal dan akhir dari kelompok ini. Para ahli dan peneliti biasanya menggunakan awal 1980-an sebagai awal kelahiran. kelompok ini dan pertengahan tahun 1990-an hingga awal 2000-an sebagai akhir kelahiran.</p>
+			<h1 class="primaryfont">Apa Itu Millenial?</h1>
+			<p class="secondaryfont">Milenial (juga dikenal sebagai Generasi Y atau Generasi Langgas) adalah kelompok demografi setelah Generasi X. Para ahli dan peneliti biasanya menggunakan awal 1980-an sebagai awal kelahiran kelompok ini dan pertengahan tahun 1990-an hingga awal 2000-an sebagai akhir kelahiran.<br><br>Milenial pada umumnya adalah anak-anak dari generasi Baby Boomers dan Gen-X yang tua. Milenial kadang-kadang disebut sebagai "Echo Boomers" karena adanya 'booming' (peningkatan besar).</p>
 		</div>
   </div>
   
   <!-- div2 -->
   <div class="kolom" id="div2" style="display: none;">
-    <div class="kolom6">
-			<img src="img/content2.png" class="pic">
+    <div class="kolom73">
+			<img src="img/content2.png" class="pic2">
 		</div>
-		<div class="kolom6 content">
-			<p class="primaryfont">Karakteristik Gen Milenial</p>
-			<p class="secondaryfont">Karakteristik Milenial ini umumnya ditandai oleh peningkatan penggunaan dan keakraban dengan komunikasi, media, dan teknologi digital. meskipun pengaruhnya masih diperdebatkan. Masa Resesi Besar (The Great Recession) memiliki dampak yang mengakibatkan tingkat pengangguran yang tinggi di kalangan anak muda, dan menimbulkan spekulasi tentang kemungkinan krisis sosial-ekonomi jangka panjang yang merusak generasi.</p>
+		<div class="kolom5 content">
+			<p class="primaryfont">Karakteristik</p>
+			<p class="secondaryfont">Karakteristik pada generasi Milenial ini umumnya ditandai oleh peningkatan penggunaan dan keakraban dengan komunikasi, media, dan teknologi digital. Di sebagian besar belahan dunia, pengaruh mereka ditandai dengan peningkatan liberalisasi politik dan ekonomi; meskipun pengaruhnya masih diperdebatkan.<br><br>Dampak yang besar pada generasi ini mengakibatkan tingkat pengangguran yang tinggi di kalangan anak muda, dan menimbulkan spekulasi tentang kemungkinan krisis sosial-ekonomi jangka panjang yang merusak generasi ini.</p>
     </div>
   </div>
 
   <!-- div3 -->
   <div class="kolom" id="div3" style="display: none;">
-    <div class="kolom6">
+    <div class="kolom73">
 			<img src="img/content.png" class="pic">
 		</div>
-		<div class="kolom6 content">
+		<div class="kolom5 content">
 			<h1 class="primaryfont">Siapkan Dirimu!</h1>
-			<p class="secondaryfont">Deksripsi.</p>
+			<p class="secondaryfon">Deksripsi.</p>
     </div>
   </div>
 </section>
@@ -123,33 +122,25 @@
         <button class="dot2" id="profile3"></button>
       </div>
   </div>
-  <img class="jar1" src="img/jar1.png">
-  <img class="jar2" src="img/jar2.png">
-  <img class="jar3" src="img/bg_section.png">
   <div class="kolom12 tab secondaryfont" id="textbox">
     <h2>Engkus Kusnadi</h2>
     <p><i>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eos assumenda in molestiae eligendi labore quos voluptatum dolores voluptas quibusdam, doloremque id quod sequi cum inventore? Neque impedit porro ab."</i></p>
   </div>
 </section>
-<section id="video" style="height: 49rem;">
-
-    <!-- <span style=" margin-left: 185px;" class="primaryfont yearslider active2" id="2014">2014</span>
-    <span style=" margin-left: 270px; position: absolute; font-size: 23px;" class="primaryfont">&#9866;</span>
-    <span style=" margin-left: 325px;" class="primaryfont yearslider" id="2018">2018</span> -->
+<section id="video">
     <div class="kolom">
-      <div class="kolom6">
-          <img src="img/Asset 13.png" style="width: 65%; position: absolute; z-index: -9999; margin-left: 27rem;">
-        <div class="primaryfont againts" style="text-align: left; margin:0; font-size: 36pt; margin-left: 95px;">
+      <div class="kolom8">
+          <img src="img/Asset 13.png" style="width: 70%; position: absolute; z-index: -9999; right:-200;">
+        <div class="primaryfont againts title2">
             <p>MILLENIALS</p>
-            <p>AGENTS INDUSTRIONAL</p>
+            <p>AGAINTS INDUSTRIAL</p>
             <p>REVOLUTION 4.0</p>
         </div>
-        <p class="secondaryfont jt" style="margin-left: 100px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla a risus rhoncus, rutrum dolor quis, fringilla turpis. Pellentesque non auctor  Nullam elementum aliquet nisl eget consequat. Praesent id lorem quis metus facilisis lobortis. Pellentesque nisi enim, ullamcorper ac rhoncus eget, interdum sed mauris. Maecenas eu nisl sed ex maximus varius ac in mi. Maecenas a suscipit dui. Nullam pellentesque interdum est ullamcorper aliquam. Vestibulum feugiat ornare neque, et rutrum </p>
-      <p class="primaryfont againts" style="margin-left: 10px; text-align:left;">Persentase pengangguran di Indonesia</p>
+        <p class="secondaryfont jt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla a risus rhoncus, rutrum dolor quis, fringilla turpis. Pellentesque non auctor Nullam elementum aliquet nisl eget consequat. Praesent id lorem quis metus facilisis lobortis. Pellentesque non auctor Nullam elementum aliquet nisl eget consequat. Praesent id lorem quis metus facilisis lobortis.</p>
+      <p class="primaryfont" style="text-align:left; font-size: 20px; padding-left: 8rem; padding-top: 1rem">Persentase pengangguran<br>di Indonesia :</p>  
           </div>
-          <div class="kolom6">
-            <img src="img/robot.png" style="width: 95%"> 
-          </div>
+          <img src="img/robot.png" style="width: 55%; right: -48; padding-top: 7rem;position: absolute; overflow: hidden !important;"> 
+          <img src="img/bgg.png" style="max-width: 100%; z-index:10;">
 </div>
 </section>
 <section  style="height: 49rem;"  >
