Little Big Update

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script type="text/javascript" src="jquery-3.4.1.js"></script>
   <script type="text/javascript" src="jquery.waterwheelCarousel.js"></script>
   <script src="anime.min.js"></script>
+  <script type="text/javascript" src="core.js"></script>
 </head>
 <body>
 <section id="landing">
@@ -127,25 +128,32 @@
     <p><i>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eos assumenda in molestiae eligendi labore quos voluptatum dolores voluptas quibusdam, doloremque id quod sequi cum inventore? Neque impedit porro ab."</i></p>
   </div>
 </section>
-<section id="video">
+<section id="video" style="height: auto">
+  <img src="img/Asset 13.png" style="width: 75%; position: absolute; z-index: -10; right:-200; ">
     <div class="kolom">
       <div class="kolom8">
-          <img src="img/Asset 13.png" style="width: 70%; position: absolute; z-index: -9999; right:-200;">
         <div class="primaryfont againts title2">
             <p>MILLENIALS</p>
             <p>AGAINTS INDUSTRIAL</p>
             <p>REVOLUTION 4.0</p>
         </div>
         <p class="secondaryfont jt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla a risus rhoncus, rutrum dolor quis, fringilla turpis. Pellentesque non auctor Nullam elementum aliquet nisl eget consequat. Praesent id lorem quis metus facilisis lobortis. Pellentesque non auctor Nullam elementum aliquet nisl eget consequat. Praesent id lorem quis metus facilisis lobortis.</p>
-      <p class="primaryfont" style="text-align:left; font-size: 20px; padding-left: 8rem; padding-top: 1rem">Persentase pengangguran<br>di Indonesia :</p>  
-          </div>
-          <img src="img/robot.png" style="width: 55%; right: -48; padding-top: 7rem;position: absolute; overflow: hidden !important;"> 
-          <img src="img/bgg.png" style="max-width: 100%; z-index:10;">
-</div>
-</section>
-<section  style="height: 49rem;"  >
-  
-    
+      <p class="normalfont" style="text-align:left; font-size: 18px;letter-spacing: 0;padding-left: 7.5rem; padding-top: 5px">Persentase pengangguran<br>di Indonesia :</p>  
+      <div class="kolom secondaryfont jt2 percentage">
+        <div class="round-log">74%<p>SMA</p></div>
+        <div class="round-log2">33%<p>SMK</p></div>
+        <div class="round-log3">10%<p>Sarjana</p></div>
+      </div>    
+      <div class="dot3 active" style="margin-left: 8rem; margin-top: 15px"><p>2014</p></div>
+      <div class="dot4 active" style="margin-top: 15px"></div><div class="dot4" style="margin-top: 15px"></div>
+      <div class="dot3" style="margin-top: 15px"><p>2018</p></div>
+      </div>
+          <img src="img/robot.png" style="width: 54%; right: -30; padding-top: 8rem;position: absolute; overflow: hidden !important;"> 
+          <img src="img/man1.png" style="width: 25%; position: absolute; margin-top: 79.7rem; margin-left:105px; z-index: 3;">
+          <img src="img/hiclipart.com-id_mutwh.png" style="width: 25%; position:absolute; margin-top:75rem; margin-left: 840px;">
+        </div>
+<img src="img/bgg.png" style="max-width: 100%; z-index:2;">
+</section>    
 </section>
 <section id="againts"style="height:49rem;  background-color:black;">
 <div class="kolom">
@@ -155,7 +163,7 @@
     <p style="margin:0;">SIAPKAN </p>
     <p style="margin:0;">DIRIMU</p>
 
-<p class="secondaryfont jt" style="margin-left: 100px; color: white;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla a risus rhoncus, rutrum dolor quis, fringilla turpis. Pellentesque non auctor  Nullam elementum aliquet nisl eget consequat. Praesent id lorem quis metus facilisis lobortis. Pellentesque nisi enim, ullamcorper ac rhoncus eget, interdum sed mauris. Maecenas eu nisl sed ex maximus varius ac in mi. Maecenas a suscipit dui. Nullam pellentesque interdum est ullamcorper aliquam. Vestibulum feugiat ornare neque, et rutrum </p>
+<p class="secondaryfont " style="margin-left: 100px; color: white;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla a risus rhoncus, rutrum dolor quis, fringilla turpis. Pellentesque non auctor  Nullam elementum aliquet nisl eget consequat. Praesent id lorem quis metus facilisis lobortis. Pellentesque nisi enim, ullamcorper ac rhoncus eget, interdum sed mauris. Maecenas eu nisl sed ex maximus varius ac in mi. Maecenas a suscipit dui. Nullam pellentesque interdum est ullamcorper aliquam. Vestibulum feugiat ornare neque, et rutrum </p>
 <p class="primaryfont" style="color: white; font-size: 28pt; margin-left: 100px;">Rekomendasi Pekerjaan untuk Kaum Millenial</p>
 </div>
 </section>
