--- a/index.html
+++ b/index.html
@@ -195,15 +195,23 @@
 <div class="kolom5">
 </div>
 </section>
-<section id="jobs">
+<section  id="jobs">
 <div class="kolom">
-  <div class="kolom4">
-
+  <div class="kolom3">
+<p class="normalfont m-0" style="font-size: 56pt; margin-left: 85px; margin-top: 110px;">Bisnis </p>
+<span class="normalfont m-0" style="font-size: 56pt; margin-left: 85px; color: #00b686">Online </span>
+<p style="margin-top: 100px; margin-left: 85px; font-size: 18pt;" class="normalfont m-0">Tools</p>
+<span style="height: 35px; width: 35px;background-color: #1e88e5b2; border-radius: 50% ;display: inline-block; margin-left: 85px; margin-top: 15px;"></span>
+<span class="dotbisnis"></span>
+<span class="dotbisnis"></span>
+<span class="dotbisnis"></span>
+<p class="normalfont m-0 " style="font-size: 20pt; margin-left: 85px;">Average Salary</p>
+<span style="margin-left: 85px; font-family: roboto; font-size: 24pt;" >Rp.25Jt/Perbulan</span>
   </div>
-  <div class="kolom4">
-    
+  <div class="kolom6" style="background-color:#03a9f4; ">
+<img src="img/ilustration_toko.png" style="width: 100%; margin-top: 75px;">
   </div>
-  <div class="kolom4">
+  <div class="kolom3">
     
   </div>
 </div>   
