--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset='utf-8'>
   <title>Millenyal - Kehidupan Generasi Milenial</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <!-- CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/font-awesome.css">
   <link rel="stylesheet" type="text/css" href="aos.css"/>
   <link rel="stylesheet" type="text/css" href="style.css">
   <!-- JS -->
