--- a/index.html
+++ b/index.html
@@ -59,24 +59,31 @@
   </div>
 
   <!-- Next and previous buttons -->
-  <a class="prev" id="tes" onclick="plusSlides(-1)"><img src="img/leftarrow.png"></a>
-  <?xml version="1.0" encoding="utf-8"?>
-  <!-- Generator: Adobe Illustrator 21.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+  <a class="prev" id="prevSlide" onclick="plusSlides(-1)"><img src="img/leftarrow.png"></a>
+  <a class="next" id="nextSlide" onclick="plusSlides(1)"><img src="img/rightarrow.png"></a>
+
+  <!-- SVG -->
   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-     viewBox="0 0 1366 878" style="enable-background:new 0 0 1366 878;" xml:space="preserve">
+     viewBox="0 0 1366 878" style="enable-background:new 0 0 1366 768;" xml:space="preserve">
   <style type="text/css">
     .st0{fill:url(#SVGID_1_);}
   </style>
-  <linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="1437.5459" y1="482.0944" x2="-77.0984" y2="395.623">
+  <linearGradient  class="gradi"id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="1474.2449" y1="767.6348" x2="-101.7551" y2="-26.3652">
     <stop  offset="0" style="stop-color:#00A5F4"/>
     <stop  offset="0.1793" style="stop-color:#009EEB"/>
     <stop  offset="0.4772" style="stop-color:#0089D1"/>
     <stop  offset="0.8548" style="stop-color:#0069A8"/>
     <stop  offset="0.9944" style="stop-color:#005B97"/>
   </linearGradient>
-  <path class="st0 pertama" d="M1366,768c0,0-121-111-364-111c-142.1,0-380.6,68.4-690,166C106,888,0,878,0,878V0h1366V768z"/>
+  <linearGradient  class="gradi"id="GRADI2" gradientUnits="userSpaceOnUse" x1="1474.2449" y1="767.6348" x2="-101.7551" y2="-26.3652">
+      <stop  offset="0" style="stop-color:rgb(238, 11, 144)"/>
+      <stop  offset="0.1793" style="stop-color:rgb(235, 0, 118)"/>
+      <stop  offset="0.4772" style="stop-color:rgb(209, 0, 87)"/>
+      <stop  offset="0.8548" style="stop-color:rgb(168, 0, 0)"/>
+      <stop  offset="0.9944" style="stop-color:rgb(151, 0, 0)"/>
+    </linearGradient>
+  <path class="st0 pertama" d="M1366,713c0,0-90.2-110-386.6-110C801.8,603,469,723,212.6,791.6C61.7,832.1,0,821,0,821V0h1366V713z"/>
   </svg>
-  <a class="next" id="tes2" onclick="plusSlides(1)"><img src="img/rightarrow.png"></a>
 </div>
 <br>
 
@@ -137,14 +144,14 @@
     <div class="profile">
         <h1 class="primaryfont" data-aos="fade-down" data-aos-offset="100" data-aos-duration="500" >Pendapat Ahli</h1>
           <div class="kolom12" id="carousel" data-aos="fade-up" data-aos-duration="500">
-            <img src="img/rei1.jpg" data-title="Emily Miethner" data-org="Millennial Expert" data-number=1 data-content="Saya enggak mau bilang kalau baby boomers suka ngajuin pertanyaan-pertanyaan bodoh. Saya cuma mau mastiin mereka tidak menganggap milenial bukan anak-anak manja yang selalu minta diistimewakan." id="item-1" class="round "/>
-            <img src="img/rei2.jpg" data-title="Mark Zuckenberg" data-org="CEO Facebook" data-number=2 data-content="Kita hidup di masa yang tidak stabil, dimana orang-orang yang ditinggalkan oleh globalisasi di seluruh dunia sulit untuk peduli dengan orang-orang di luar sana ketika kita belum merasa nyaman dengan kehidupan kita di rumah. Ada tekanan untuk berubah." id="item-2" class="round" />
-            <img src="img/rei3.jpg" data-title="Rudiantara" data-org="Menteri Komunikasi dan Informatika" data-number=3 data-content="Ini kesempatan milenial untuk berkontribusi dalam berbagi untuk sesama. Ini juga menjadi tantangan bagi mereka. Kita lihat nanti hasilnya. Kalau ini pas dan diviralkan, saya yakin program ini akan menjadi kesuksesan yang luar biasa untuk Indonesia" id="item-3" class="round" />
+            <img src="img/rei1.jpg" data-number="1" data-title="Emily Miethner" data-org="Millennial Expert" data-number=1 data-content="Saya enggak mau bilang kalau baby boomers suka ngajuin pertanyaan-pertanyaan bodoh. Saya cuma mau mastiin mereka tidak menganggap milenial bukan anak-anak manja yang selalu minta diistimewakan." id="item-1" class="round "/>
+            <img src="img/rei2.jpg" data-number="2" data-title="Mark Zuckenberg" data-org="CEO Facebook" data-number=2 data-content="Kita hidup di masa yang tidak stabil, dimana orang-orang yang ditinggalkan oleh globalisasi di seluruh dunia sulit untuk peduli dengan orang-orang di luar sana ketika kita belum merasa nyaman dengan kehidupan kita di rumah. Ada tekanan untuk berubah." id="item-2" class="round" />
+            <img src="img/rei3.jpg" data-number="3" data-title="Rudiantara" data-org="Menteri Komunikasi dan Informatika" data-number=3 data-content="Ini kesempatan milenial untuk berkontribusi dalam berbagi untuk sesama. Ini juga menjadi tantangan bagi mereka. Kita lihat nanti hasilnya. Kalau ini pas dan diviralkan, saya yakin program ini akan menjadi kesuksesan yang luar biasa untuk Indonesia" id="item-3" class="round" />
           </div>
       <div id="indicator" data-aos="fade-up" data-aos-offset="-200" data-aos-duration="500" >
-        <button class="dot2" id="profile4"></button>
-        <button class="dot2" id="profile5"></button>
-        <button class="dot2" id="profile6"></button>
+        <button class="dot2 active" id="profile1"></button>
+        <button class="dot2" id="profile2"></button>
+        <button class="dot2" id="profile3"></button>
       </div>
   </div>
   <div class="kolom12 tab secondaryfont" id="textbox" data-aos="fade-up" data-aos-offset="-100" data-aos-duration="500" >
@@ -178,11 +185,13 @@
       </div>
           <img src="img/robot.png" data-aos="fade-up-left" data-aos-offset="300" data-aos-duration="500"  style="width: 54%; right: -3%; padding-top: 8rem;position: absolute; z-index: -5;"> 
       
-          <img class="orang"src="img/man1b.png" data-aos="fade-up" data-aos-duration="500" style="width: 29%;position: absolute; margin-top: 77rem; margin-left: 3.4rem; z-index: 6;">
+          <img class="orang"src="img/man1b.png" style="width: 29%;position: absolute; margin-top: 77rem; margin-left: 3.4rem; z-index: 6;">
           <a href="#ex1" rel="modal:open" class="video"><img src="img/hiclipart.com-id_mutwh.png"></a>
 
         </div>
-        <div data-aos="fade-up" data-aos-duration="500" data-aos-offset="400">        
+        <div data-aos="fade-up" data-aos-duration="500" data-aos-offset="400">
+        <div class="btn" style="margin-top:11.2rem;position: absolute; margin-left: 11.5rem;"></div>
+        
         <div id="app" style="margin-top:11.6rem; position: absolute; margin-left: 13rem"></div>
         <div id="search" style="margin-left: 11rem; margin-top:15rem; position: absolute; ">
           <p style="font-size:18;" class="arial m-0">Generasi Millenial Terancam Menjadi Pengangguran</p>
